@@ -1193,6 +1193,7 @@ procedure shellStatementByteCode( ci : in out compressionInfo;
   inBackslash    : boolean;
   inRedirect     : boolean;
   redirectAmpersand : boolean;
+  maybeStdErrRedirect : boolean;
 begin
   -- Tokenize shell words in the line.  This is very similar to getNextToken
   -- except tokens are stored in the compressed script instead of in a
@@ -1219,6 +1220,10 @@ begin
 
   -- special tokens: check up front
 
+  inRedirect        := false;
+  redirectAmpersand := false;
+  maybeStdErrRedirect := false;
+
   ch := Element( command, cmdpos );
   if ch = ';' then
      ci.context := startOfStatement;
@@ -1235,6 +1240,17 @@ begin
      ci.compressedScript := ci.compressedScript & ch;
      cmdpos := cmdpos + 1;
      return;
+  elsif ch = '>' then
+     -- TODO: error redirect
+     -- TODO: should probably have a handle redirect subroutine
+     inRedirect := true;
+     redirectAmpersand := true;
+  elsif ch = '<' then
+     -- TODO: should probably have a handle redirect subroutine
+     inRedirect := true;
+  elsif ch = '2' then
+     -- TODO: should probably have a handle redirect subroutine
+     maybeStdErrRedirect := true;
   end if;
 
   -- Check for an Ada-style comment
@@ -1274,8 +1290,6 @@ begin
   inSingleQuotes    := false;
   inBackQuotes      := false;
   inBackslash       := false;
-  inRedirect        := false;
-  redirectAmpersand := false;
 
   -- Check for special single-character shell words
   --
@@ -1333,6 +1347,7 @@ begin
     end if;
 
     ch := Element( command, cmdpos );                       -- next character
+    -- put_line( "ch = " & ch & " redirect = " & inRedirect'img ); -- DEBUG
 
     -- Second, check for characters that will interfere with the compressed
     -- tokens.
@@ -1347,7 +1362,29 @@ begin
 
     -- Third, handle quoting quoting characters
 
-    if ch = '"' and not inSingleQuotes and not inBackslash then
+    -- A shell redirect is detected by an unescaped '>'.  It can only
+    -- be followed by >, & or 1.  Any other character terminates the
+    -- redirection and finishes the shell word.
+
+    if maybeStdErrRedirect then
+       if ch = '>' then
+          inRedirect := true;
+       elsif ch /= '2' then  -- should not be
+          maybeStdErrRedirect := false;
+       end if;
+    end if;
+
+    if inRedirect and ch /= '>' and ch /= '<' and ch /= '&' and ch /= '1' then
+--put_line( "redirect done: exiting" ); -- DEBUG
+       inRedirect := false;
+       redirectAmpersand := false;
+       lastpos := cmdpos - 1;
+       exit;
+    elsif not inRedirect and (ch = '>' or ch = '<') and not inDoubleQuotes 
+       and not inSingleQuotes and not inBackslash then
+       lastpos := cmdpos - 1;
+       exit;
+    elsif ch = '"' and not inSingleQuotes and not inBackslash then
        inDoubleQuotes := not inDoubleQuotes;
     elsif ch = ''' and not inDoubleQuotes and not inBackslash then
        inSingleQuotes := not inSingleQuotes;
@@ -1355,18 +1392,6 @@ begin
        inBackQuotes := not inBackQuotes;
     elsif ch = '\' and not inSingleQuotes and not inBackslash then
        inBackslash := true;
-
-    -- A shell redirect is detected by an unescaped '>'.  It can only
-    -- be followed by >, & or 1.  Any other character terminates the
-    -- redirection and finishes the shell word.
-
-    elsif inRedirect and ch /= '>' and ch /= '&' and ch /= '1' then
-       lastpos := cmdpos - 1;
-       exit;
-    elsif ch = '>' and not inSingleQuotes and not inBackslash then
-       inRedirect := true;
-       redirectAmpersand := true;
-
     else
 
     -- Fourth, look for word terminators
@@ -1395,13 +1420,13 @@ begin
        -- Got here? Character is good.  Backslashing?  Turn it off.
 
        inBackslash := false;
-       inRedirect  := false;
 
     end if; -- no quoting characters
     word := word & ch;
     cmdpos := cmdpos + 1;
   end loop;
 
+  -- put_line( "word = " & to_string(word) ); -- DEBUG
   ci.compressedScript := ci.compressedScript & toByteCode( imm_delim_t ) &
      word & toByteCode( imm_delim_t );
   --ci.compressedScript := ci.compressedScript & toByteCode( imm_delim_t ) &
@@ -1771,6 +1796,7 @@ procedure startOfStatementByteCode( ci : in out compressionInfo;
   inBackQuotes   : boolean;
   inBackslash    : boolean;
   inRedirect     : boolean;
+  redirectAmpersand : boolean;
 begin
   -- Tokenize shell words in the line.  This is very similar to getNextToken
   -- except tokens are stored in the compressed script instead of in a
@@ -1864,7 +1890,8 @@ begin
      inBackQuotes   := false;
      inBackslash    := false;
      inRedirect     := false;
-     -- checkAppend    := false;
+     redirectAmpersand := false;
+
      -- read the first character, escaping high ascii if needed
      if ch > ASCII.DEL then
         word := word & toByteCode( char_escape_t );
@@ -1913,8 +1940,17 @@ begin
               lastpos := lastpos+1;
               exit when lastpos > length( command );
               goto next_word_char;
-           elsif ch = '>' and not inSingleQuotes and not inBackslash then
-              -- this affects & as in >& as a stopword
+
+          -- A shell redirect is detected by an unescaped '>'.  It can only
+          -- be followed by >, & or 1.  Any other character terminates the
+          -- redirection and finishes the shell word.
+
+            elsif inRedirect and ch /= '>' and ch /= '&' and ch /= '1' then
+               lastpos := cmdpos - 1;
+               exit;
+            elsif ch = '>' and not inSingleQuotes and not inBackslash then
+              inRedirect := true;
+              redirectAmpersand := true;
               inRedirect := true;
               word := word & ch;
               lastpos := lastpos+1;
@@ -1936,7 +1972,7 @@ begin
                  ch = '=' or
                  ch = '(' ;
               exit when
-                 ch = '&' and not inRedirect;
+                 ch = '&' and not redirectAmpersand;
            end if;
 
            -- It must be a shell word if not an identifier...if it's not
